Updated admin.html, list_questions.html, dashboard.html,personality_test.html, server.js and index.html to add user session information in local storage and to add delete question from list functionality.

--- a/Admin_Management/admin.html
+++ b/Admin_Management/admin.html
@@ -129,5 +129,13 @@
     <footer>
         <p>&copy; 2025 Your Company. All rights reserved.</p>
     </footer>
+    <script>
+        const username = localStorage.getItem("username");
+    
+        if (!username || username !== 'sangram') {
+            alert("You are not authorized to access this page. Redirecting to login page...");
+            window.location.href = "/";
+        }
+    </script>
 </body>
 </html>
