--- a/index.html
+++ b/index.html
@@ -138,5 +138,8 @@
     <footer>
         <p>&copy; 2025 Your Company. All rights reserved.</p>
     </footer>
-</body>
+    <script>
+    <a href="/" class="logout-btn" onclick="localStorage.clear();">Logout</a>
+</script>
+    </body>
 </html>
