--- a/Dashboard/chatbox.html
+++ b/Dashboard/chatbox.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Personal AI Assistance</title>
     <style>
         body {
             margin: 0;
@@ -69,33 +69,51 @@
 
         h1 {
             font-size: 2.5rem;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
             color: #008080; /* Teal */
         }
 
-        p {
-            font-size: 1.2rem;
-            margin-bottom: 20px;
-        }
-
-        .tile-container {
+        .chat-container {
+            width: 80%;
+            max-width: 600px;
+            height: 400px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            background-color: white;
             display: flex;
-            gap: 20px;
-            margin-top: 20px;
+            flex-direction: column;
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        .btn {
+        .chat-messages {
+            flex: 1;
+            padding: 10px;
+            overflow-y: auto;
+        }
+
+        .chat-input {
+            display: flex;
+            border-top: 1px solid #ccc;
+        }
+
+        .chat-input input {
+            flex: 1;
+            padding: 10px;
+            border: none;
+            outline: none;
+        }
+
+        .chat-input button {
             background-color: #008080; /* Teal */
             color: white;
-            padding: 15px 30px;
-            text-decoration: none;
-            font-size: 1.2rem;
-            border-radius: 8px;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
             transition: background-color 0.3s ease;
-            text-align: center;
         }
 
-        .btn:hover {
+        .chat-input button:hover {
             background-color: #006666; /* Darker Teal */
         }
 
@@ -111,20 +129,22 @@
 </head>
 <body>
     <header>
-        <div class="page-title">Dashboard</div>
+        <div class="page-title">Personal AI Assistance</div>
         <a href="/" class="logout-btn" onclick="localStorage.clear();">Logout</a>
     </header>
     <div class="breadcrumb">
-        <a href="/Dashboard/dashboard.html">Dashboard</a>
+        <a href="/Dashboard/dashboard.html">Dashboard</a> > <a href="/Dashboard/chatbox.html">Personal AI Assistance</a>
     </div>
     <main>
-        <h1>Welcome to the Dashboard!</h1>
-        <p>Logged in as: <span id="logged-in-username">Loading...</span></p> <!-- Display Logged-in Username -->
-        <p>Your Score: <span id="user-score">Loading...</span></p> <!-- Display User Score -->
-        <div class="tile-container">
-            <a href="/Dashboard/personality_test.html" class="btn">Take Personality Test</a>
-            <a href="/Dashboard/chatbox.html" class="btn">Personal AI Assistance</a> <!-- New Tile -->
-            <a href="/" class="btn" onclick="localStorage.clear();">Logout</a>
+        <h1>Chat with Your AI Assistant</h1>
+        <div class="chat-container">
+            <div class="chat-messages" id="chat-messages">
+                <!-- Chat messages will appear here -->
+            </div>
+            <div class="chat-input">
+                <input type="text" id="chat-input" placeholder="Type your message here...">
+                <button id="send-button">Send</button>
+            </div>
         </div>
     </main>
     <footer>
@@ -132,6 +152,7 @@
     </footer>
 
     <script>
+        // Check if the user is logged in
         const username = localStorage.getItem("username");
 
         if (!username) {
@@ -139,18 +160,29 @@
             window.location.href = "/";
         }
 
-        // Display the logged-in username
-        document.getElementById('logged-in-username').textContent = username;
+        const chatMessages = document.getElementById('chat-messages');
+        const chatInput = document.getElementById('chat-input');
+        const sendButton = document.getElementById('send-button');
 
-        // Fetch the logged-in user's score
-        fetch(`/api/personality_test/score?username=${username}`)
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById('user-score').textContent = data.score || 'No Score';
-            })
-            .catch(() => {
-                document.getElementById('user-score').textContent = "Error fetching score";
-            });
+        // Handle sending messages
+        sendButton.addEventListener('click', () => {
+            const message = chatInput.value.trim();
+            if (message) {
+                const userMessage = document.createElement('div');
+                userMessage.textContent = `You: ${message}`;
+                chatMessages.appendChild(userMessage);
+                chatInput.value = '';
+                chatMessages.scrollTop = chatMessages.scrollHeight;
+
+                // Simulate AI response
+                setTimeout(() => {
+                    const aiMessage = document.createElement('div');
+                    aiMessage.textContent = `AI: I'm here to assist you!`;
+                    chatMessages.appendChild(aiMessage);
+                    chatMessages.scrollTop = chatMessages.scrollHeight;
+                }, 1000);
+            }
+        });
     </script>
 </body>
 </html>
