--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <div class="logo">DISC Personality</div>
+            <div class="logo">DISC Personality Analysis</div>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -91,7 +91,7 @@
 
         <section id="about" class="container about-section">
             <h2>About DISC Personality Analysis</h2>
-            <p>Learn more about the DISC model and how understanding your personality type can benefit you in various aspects of life, including work and relationships.</p>
+            <p>DISC Personality Analysis is a behavioral model used to understand individual tendencies, communication styles, and decision-making approaches. It categorizes behaviors into four main styles: Dominance (D), Influence (I), Steadiness (S), and Conscientiousness (C). By analyzing scores across these dimensions, individuals can gain insights into their behavior, which can be beneficial in various aspects of life, including work and relationships.</p>
         </section>
     </main>
 
