--- a/Dashboard/chatbox.html
+++ b/Dashboard/chatbox.html
@@ -4,48 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal AI Assistance</title>
+    <link rel="stylesheet" href="../Style/style.css">
     <style>
         body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #eef1f7;
-            color: #333;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            background-color: #f8f9fa;
         }
 
-        /* Header Styling */
-        header {
-            background-color: #008080; /* Teal */
+        main {
+            flex: 1;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .header {
+            background-color: #008080;
             color: white;
-            padding: 20px 40px;
+            padding: 10px 20px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        .page-title {
-            font-size: 1.8rem;
+        .header .title {
+            font-size: 1.5rem;
             font-weight: bold;
         }
 
         .logout-btn {
-            background-color: #E74C3C;
+            margin-left: auto;
+            padding: 8px 16px;
+            background-color: #dc3545;
             color: white;
-            padding: 8px 15px;
-            text-decoration: none;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
             font-size: 0.9rem;
-            border-radius: 5px;
-            transition: 0.3s;
         }
 
         .logout-btn:hover {
-            background-color: #C0392B;
+            background-color: #c82333;
         }
 
-        /* Breadcrumb Styling */
         .breadcrumb {
-            margin: 20px 40px;
+            max-width: 1100px;
+            margin: 10px auto 0;
+            padding: 0 20px;
             font-size: 0.9rem;
+            text-align: left;
+            align-self: flex-start;
         }
 
         .breadcrumb a {
@@ -58,98 +69,158 @@
             text-decoration: underline;
         }
 
-        /* Main Content Styling */
-        main {
+        .chat-wrapper {
+            max-width: 950px;
+            width: 100%;
+            margin: 20px auto;
+            padding: 30px;
+            background: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 80vh;
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 20px;
-            color: #008080; /* Teal */
         }
 
         .chat-container {
-            width: 80%;
-            max-width: 600px;
-            height: 400px;
-            border: 1px solid #ccc;
+            width: 100%;
+            height: 70vh;
+            border: 1px solid #ced4da;
             border-radius: 8px;
-            background-color: white;
+            background-color: #f8f9fa;
             display: flex;
             flex-direction: column;
             overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         .chat-messages {
             flex: 1;
-            padding: 10px;
+            padding: 15px;
             overflow-y: auto;
+            background-color: #ffffff;
+            border-bottom: 1px solid #ced4da;
         }
 
         .chat-input {
             display: flex;
-            border-top: 1px solid #ccc;
+            flex-direction: column;
+            border-top: 1px solid #ced4da;
+            background-color: #ffffff;
+            padding: 10px;
+        }
+
+        .chat-input label {
+            font-weight: bold;
+            margin-bottom: 5px;
+            color: #495057;
         }
 
         .chat-input input {
             flex: 1;
-            padding: 10px;
-            border: none;
+            padding: 12px;
+            border: 1px solid #ced4da;
             outline: none;
+            font-size: 1rem;
+            border-radius: 4px;
+            margin-bottom: 10px;
         }
 
         .chat-input button {
-            background-color: #008080; /* Teal */
-            color: white;
             border: none;
-            padding: 10px 20px;
+            padding: 12px 20px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
+            font-size: 1rem;
+            background-color: #008080;
+            color: white;
+            border-radius: 4px;
         }
 
         .chat-input button:hover {
-            background-color: #006666; /* Darker Teal */
+            background-color: #006666;
         }
 
-        /* Footer Styling */
-        footer {
-            background-color: #008080; /* Teal */
-            color: white;
+        /* Modal Styling */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
             text-align: center;
-            padding: 15px 0;
-            margin-top: 40px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            max-width: 400px;
+            width: 90%;
+        }
+
+        .modal-content p {
+            margin-bottom: 20px;
+            font-size: 1.1rem;
+            color: #333;
+        }
+
+        .modal-content button {
+            background-color: #008080;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 1rem;
+        }
+
+        .modal-content button:hover {
+            background-color: #006666;
         }
     </style>
 </head>
 <body>
-    <header>
-        <div class="page-title">Personal AI Assistance</div>
-        <a href="/" class="logout-btn" onclick="localStorage.clear();">Logout</a>
+    <header class="header">
+        <div class="title">AI Assistant</div>
+        <button class="logout-btn" onclick="localStorage.clear(); window.location.href = '/';">Logout</button>
     </header>
+
     <div class="breadcrumb">
-        <a href="/Dashboard/dashboard.html">Dashboard</a> > <a href="/Dashboard/chatbox.html">Personal AI Assistance</a>
+        <a href="/Dashboard/dashboard.html">Dashboard</a> > <a href="/Dashboard/chatbox.html">AI Assistant</a>
     </div>
+
     <main>
-        <h1>Chat with Your AI Assistant</h1>
-        <div class="chat-container">
-            <div class="chat-messages" id="chat-messages">
-                <!-- Chat messages will appear here -->
-            </div>
-            <div class="chat-input">
-                <input type="text" id="chat-input" placeholder="Type your message here...">
-                <button id="send-button">Send</button>
+        <div class="chat-wrapper">
+            <h1>Chat with Your AI Assistant</h1>
+            <div class="chat-container">
+                <div class="chat-messages" id="chat-messages">
+                    <div class="ai-message">AI: Hello! How can I help you today?</div>
+                </div>
+                <div class="chat-input">
+                    <label for="chat-input">Enter your query:</label>
+                    <input type="text" id="chat-input" placeholder="Type your query here and press Enter or click Send">
+                    <button id="send-button" class="btn">Send</button>
+                </div>
             </div>
         </div>
     </main>
-    <footer>
-        <p>&copy; 2025 Your Company. All rights reserved.</p>
+
+    <footer class="footer">
+        <p>Contact us at <a href="mailto:info@discpersonality.com">info@discpersonality.com</a></p>
+        <p>&copy; 2025 DISC Personality. All rights reserved.</p>
     </footer>
+
+    <!-- Modal for DISC Score Warning -->
+    <div id="disc-modal" class="modal">
+        <div class="modal-content">
+            <p>You need to complete the personality test before using the chat.</p>
+            <button id="modal-ok-button">Go to Personality Test</button>
+        </div>
+    </div>
 
     <script>
         // Check if the user is logged in
@@ -158,68 +229,91 @@
         if (!username) {
             alert("You are not logged in. Redirecting to login page...");
             window.location.href = "/";
-        }
+        } else {
+            const chatMessages = document.getElementById('chat-messages');
+            const chatInput = document.getElementById('chat-input');
+            const sendButton = document.getElementById('send-button');
+            const discModal = document.getElementById('disc-modal');
+            const modalOkButton = document.getElementById('modal-ok-button');
 
-        const chatMessages = document.getElementById('chat-messages');
-        const chatInput = document.getElementById('chat-input');
-        const sendButton = document.getElementById('send-button');
+            let discScore = null;
 
-        let discScore = null;
+            // Fetch the user's DISC score
+            fetch(`/api/personality_test/score?username=${username}`)
+                .then(response => response.json())
+                .then(data => {
+                    discScore = data.score;
+                    if (!discScore || discScore === 'No Score') {
+                        // Show the modal if DISC score is not available
+                        discModal.style.display = 'flex';
+                    }
+                })
+                .catch(error => {
+                    console.error("Error fetching DISC score:", error);
+                    alert("Failed to load DISC score. Please try again later.");
+                    window.location.href = "/Dashboard/dashboard.html";
+                });
 
-        // Fetch the user's DISC score
-        fetch(`/api/personality_test/score?username=${username}`)
-            .then(response => response.json())
-            .then(data => {
-                discScore = data.score;
-                if (!discScore || discScore === 'No Score') {
-                    alert("You need to complete the personality test before using the chat.");
-                    window.location.href = "/Dashboard/personality_test.html";
-                }
-            })
-            .catch(error => {
-                console.error("Error fetching DISC score:", error);
-                alert("Failed to load DISC score. Please try again later.");
-                window.location.href = "/Dashboard/dashboard.html";
+            // Redirect to personality test page when modal button is clicked
+            modalOkButton.addEventListener('click', () => {
+                window.location.href = "/Dashboard/personality_test.html";
             });
 
-        // Handle sending messages
-        sendButton.addEventListener('click', () => {
-            const query = chatInput.value.trim();
-            if (query) {
-                // Display the user's message
-                const userMessage = document.createElement('div');
-                userMessage.textContent = `You: ${query}`;
-                chatMessages.appendChild(userMessage);
-                chatInput.value = '';
-                chatMessages.scrollTop = chatMessages.scrollHeight;
+            // Function to add a message to the chat display
+            function addMessage(sender, text) {
+                const messageDiv = document.createElement('div');
+                messageDiv.textContent = `${sender}: ${text}`;
 
-                // Send the query to the backend
-                fetch('/api/chat', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ username, query, discScore }),
-                })
-                    .then(response => response.json())
-                    .then(data => {
-                        if (data.reply) {
-                            // Display the AI's response
-                            const aiMessage = document.createElement('div');
-                            aiMessage.textContent = `AI: ${data.reply}`;
-                            chatMessages.appendChild(aiMessage);
-                            chatMessages.scrollTop = chatMessages.scrollHeight;
-                        } else {
-                            throw new Error(data.error || 'Unknown error');
-                        }
-                    })
-                    .catch(error => {
-                        console.error('Error:', error);
-                        const errorMessage = document.createElement('div');
-                        errorMessage.textContent = 'AI: Sorry, I could not process your query at the moment.';
-                        chatMessages.appendChild(errorMessage);
-                        chatMessages.scrollTop = chatMessages.scrollHeight;
-                    });
+                if (sender === 'You') {
+                    messageDiv.style.textAlign = 'right';
+                    messageDiv.style.color = 'blue';
+                } else {
+                    messageDiv.style.textAlign = 'left';
+                    messageDiv.style.color = 'green';
+                }
+
+                chatMessages.appendChild(messageDiv);
+                chatMessages.scrollTop = chatMessages.scrollHeight;
             }
-        });
+
+            // Function to handle sending messages
+            function sendMessage() {
+                const query = chatInput.value.trim();
+                if (query && discScore) {
+                    addMessage('You', query);
+                    chatInput.value = '';
+
+                    fetch('/api/chat', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({ username, query, discScore }),
+                    })
+                        .then(response => response.json())
+                        .then(data => {
+                            if (data.reply) {
+                                addMessage('AI', data.reply);
+                            } else {
+                                addMessage('AI', 'Sorry, I could not process your query at the moment.');
+                            }
+                        })
+                        .catch(error => {
+                            console.error('Error:', error);
+                            addMessage('AI', 'Sorry, I could not process your query at the moment.');
+                        });
+                } else {
+                    discModal.style.display = 'flex'; // Show modal if DISC score is not available
+                }
+            }
+
+            sendButton.addEventListener('click', sendMessage);
+
+            chatInput.addEventListener('keypress', function (event) {
+                if (event.key === 'Enter') {
+                    event.preventDefault();
+                    sendMessage();
+                }
+            });
+        }
     </script>
 </body>
 </html>
